crates/alder-parse/src/expression/snapshots/alder_parse__expression__number__tests__error_hex_no_digits.snap
---
source: crates/alder-parse/src/expression/number.rs
description: "Code:\n\n0x"
---
Number(
    HexDigit,
    1,
    3,
)
