crates/alder-parse/src/expression/snapshots/alder_parse__expression__number__tests__error_leading_zero.snap
---
source: crates/alder-parse/src/expression/number.rs
description: "Code:\n\n007"
---
Number(
    NoLeadingZero,
    1,
    2,
)
