crates/alder-parse/src/expression/snapshots/alder_parse__expression__number__tests__int_hex.snap
---
source: crates/alder-parse/src/expression/number.rs
description: "Code:\n\n0xFF"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Int(
        255,
    ),
}
