crates/alder-parse/src/expression/snapshots/alder_parse__expression__number__tests__int_large.snap
---
source: crates/alder-parse/src/expression/number.rs
description: "Code:\n\n123456789"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Int(
        123456789,
    ),
}
